--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ dot[counter-1].classList.add('active');
 				<input type="tel" name="phone" placeholder="Enter your phone no." class="contact-inputs" pattern="[0-9]{10}" required>
 				<textarea name="message" placeholder="Message" class="contact-inputs" required ></textarea>
 				<button type="submit" class="btn">Send Message</button>
+				<button type="reset" class="btn">Reset</button>
 			</form>
 	
 		</div>
